# tpcli-pi-tools

./: .coverage  .gitignore  .tpcli.yaml.example  ANALYSIS_SUMMARY.md  API_CLIENT_TEST_GAP_ANALYSIS_INDEX.md  API_CLIENT_UNTESTED_GAPS.md  COVERAGE_QUICK_REFERENCE.md  CRITICAL_GAPS_WITH_EXAMPLES.md  CURRENT_STATE_EVALUATION.md  Makefile  NEXT_STEPS.md  OUTSTANDING_WORK_ANALYSIS.md  PHASE_A1_PROGRESS_SESSION.md  README_TEST_COVERAGE.md  TEAM_PLANNING_SCRIPTS.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.txt  TODO.md  TODO.md.archive  UNTESTED_METHODS_SUMMARY.txt  go.mod  main.go  pi-4-25-platform-eco.md  pyproject.toml  test-discover.sh  tmp-pi-4-25-platform-eco.md  tmp-project-readme.md
.github/workflows/: build.yml  quality.yml  scheduled.yml  tests.yml
cmd/: arts.go  discover.go  ext.go  get.go  list.go  plan.go  root.go
docs/: INDEX.md  JIRA_INTEGRATION_STRATEGY.md  PLAN_SYNC_PRD.md  QUICKSTART.md  README.md  TESTING_STRATEGY.md
docs/adr/: 001-python-implementation-language.md  002-tpapiclient-architecture.md  003-risk-scoring-methodology.md  004-mvp-scope-and-feature-deferral.md  README.md
docs/explanation/: data-model.md  planning-hierarchy.md  project-overview.md  team-planning-summary.md
docs/how-to/: api-use-cases.md  developer-guide.md  discover-pi-structure.md  discovering-entity-types.md  manage-assignments.md  manage-work-items.md  paginate-results.md  user-guide.md  work-with-collections.md  work-with-user-stories.md
docs/ideas/: README.md  entity-discovery-helpers.md
docs/reference/: api-documentation.md  api-v1-reference.md  api-v2-reference.md  auth-methods.md  auth-troubleshooting.md  discovery.md  entity-types.md  query-syntax.md  release-notes.md  user-story-structure.md
docs/tutorials/: 01-getting-started.md  02-basic-queries.md  03-authentication-setup.md  04-team-analysis.md
pkg/tpclient/: client.go  client_test.go
plans/: PI-4-25-Cloud-Enablement.md
scripts/: README.md  describe-team.sh  map-pi-structure.sh
scripts/specs/: art-dashboard.feature  objective-deep-dive.feature  release-status.feature  team-deep-dive.feature
scripts/user-stories/: us-001-art-dashboard.md  us-002-team-deep-dive.md  us-003-objective-deep-dive.md  us-004-release-status.md
tests/: conftest.py
tests/features/: git_integration.feature  go_cli_create_update.feature  integration_e2e.feature  markdown_generation.feature  performance_optimization.feature  plan_sync_cli.feature  python_api_wrapper.feature
tests/fixtures/: README.md  builders.py  git_helper.py  mock_data.py  team_2022903_fixtures.py
tests/unit/: test_analysis.py  test_api_client.py  test_change_tracking.py  test_cli_operations.py  test_config.py  test_fixtures_example.py  test_git_integration.py  test_monitoring.py  (+4 more)
tpcli_pi/: __init__.py
(+32 files in other folders)
